k8s.ingress/monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-metrics
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
spec:
  type: ClusterIP
  ports:
  - name: metrics
    port: 10254
    targetPort: 10254
  selector:
    app.kubernetes.io/name: ingress-nginx
